# franka-dualsense-teleop

./: .gitignore  README.md  pyproject.toml
assets/franka_emika_panda/: panda.xml  scene_teleop.xml
assets/franka_fr3/: fr3_hand.xml  scene.xml  scene_teleop.xml
configs/: teleop.yaml  workspace_room316.yaml
cpp/: CMakeLists.txt  README.md
cpp/bridge/: franka_bridge.cpp  robot_limits.hpp  udp_protocol.hpp
cpp/examples/: 01_echo_state.cpp  02_move_to_home.cpp  03_gripper_probe.cpp
scripts/: calibrate_workspace.py  teleop_real.py  teleop_sim.py  test_gamepad.py  test_haptics.py
src/dsfranka/common/: config.py  ik.py  models.py  rate.py  types.py
src/dsfranka/data/: recorder.py
src/dsfranka/input/: dualsense_evdev.py  dualsense_hid.py  factory.py  gamepad.py
src/dsfranka/real/: franka_client.py
src/dsfranka/sim/: mujoco_robot.py
src/dsfranka/teleop/: feedback.py  session.py
tests/: test_pipeline.py
