[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dsfranka"
version = "0.1.0"
description = "DualSense teleoperation and data collection for Franka (MuJoCo sim + libfranka real robot)"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.2",
    "numpy",
    "evdev",
    "pydualsense",
    "h5py",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
